--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
 remote_theme: carlosperate/jekyll-theme-rtd
+repo_url: 'https://github.com/fverd/montepython'
+edit_on_github: true
+search_enabled: false
